--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"name": "Export to Supervisely Format: Blob",
+	"name": "Export to Supervisely format: Blob",
 	"type": "app",
 	"version": "2.0.0",
 	"categories": ["images", "export"],
